--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@
 project(MoPCore)
 
 # Fix compile
-SET(CMAKE_C_FLAGS "-std=gnu99" CACHE STRING "" FORCE)
+SET(CMAKE_C_FLAGS "" CACHE STRING "" FORCE)
+#above was -std=gnu99
 
 # CMake policies (can not be handled elsewhere)
 cmake_minimum_required(VERSION 2.8.9)
