Add A darkmoon faire script, nothing is activated but the script is there for later.

--- a/src/server/scripts/World/CMakeLists.txt
+++ b/src/server/scripts/World/CMakeLists.txt
@@ -23,6 +23,7 @@ set(scripts_STAT_SRCS
   World/npc_companions.cpp
   World/npcs_special.cpp
   World/npc_mine_cart.cpp
+  world/darkmoon_faire.cpp
 )
 
 message("  -> Prepared: World")
