Fix pet_dk.cpp not being included in Cmake, forgot to add it..
Also Change project name.

--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -51,6 +51,7 @@ if(SCRIPTS)
   include(Northrend/CMakeLists.txt)
   include(Pandaria/CMakeLists.txt)
   include(Maelstrom/CMakeLists.txt)
+  include(Pet/CMakeLists.txt)
 endif()
 
 message(STATUS "SCRIPT PREPARATION COMPLETE")
